@@ -3,6 +3,8 @@
  - Add missing dependency.
  - Add test for Item::obj2struct().
  - Fix issue with novalue Snak.
+ - Improve creating of Wikibase::Datatype::Item in struct2obj() to explicit
+   readable code.
 
 0.01 2020-12-11T17:07:30+01:00
  - First version.
